--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Jinja2==2.9.4 # BSD License
 selenium==3.0.2 # Apache License 2.0
 
 # Less Common Python Packages
+html5lib==0.999999999 # MIT License
 CommonMark==0.7.3 # BSD License
 cryptography==1.7.1 # BSD License
 graphviz==0.5.2 # MIT License
